--- a/components/WorkSection/WorkSection.module.css
+++ b/components/WorkSection/WorkSection.module.css
@@ -1,32 +1,94 @@
 .container {
   width: 100%;
   color: var(--mantine-primary-color-filled);
+  cursor: pointer;
+  opacity: 0.5;
+
+  transition: all 0.3s ease-out;
+
+  &:hover {
+    opacity: 1;
+
+    .arrow {
+      animation: 0.6s infinite alternate slidein;
+    }
+  }
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:link {
+}
+
+.link:visited {
+  color: var(--mantine-primary-color-6);
+}
+
+.link:focus {
+}
+
+.link:hover {
+}
+
+.link:active {
+  color: var(--mantine-primary-color-6);
 }
 
 .title {
-  font-size: 102px;
+  font-size: 80px;
+  @media (min-width: $mantine-breakpoint-xs) {
+    font-size: 102px;
+  }
+
+  @media (min-width: $mantine-breakpoint-lg) {
+    font-size: 116px;
+  }
 }
 
 .description {
-  font-size: 25px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 163%;
   letter-spacing: 0.07em;
   color: var(--mantine-primary-color-filled);
+
+  @media (min-width: $mantine-breakpoint-xs) {
+    font-size: 20px;
+  }
+
+  @media (min-width: $mantine-breakpoint-lg) {
+    font-size: 25px;
+  }
+}
+
+.tagContainer {
+  margin-left: auto;
 }
 
 .tag {
   letter-spacing: 0.21em;
   text-transform: uppercase;
   font-weight: 600;
-  line-height: 200%;
+  line-height: 100%;
   text-align: right;
   color: var(--mantine-primary-color-filled);
+  @media (min-width: $mantine-breakpoint-xs) {
+    line-height: 150%;
+  }
+
+  @media (min-width: $mantine-breakpoint-lg) {
+    line-height: 200%;
+  }
 }
 
-.divider {
-  margin-top: 4rem;
-  width: 100%;
-  height: 2px;
-  background-color: var(--mantine-primary-color-5);
+@keyframes slidein {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(30%);
+  }
 }
