Center captioned images on mobile view

--- a/app/projects/layout.module.css
+++ b/app/projects/layout.module.css
@@ -93,3 +93,10 @@
   text-decoration: none;
   color: var(--mantine-primary-color-filled);
 }
+
+.group {
+  justify-content: space-around;
+  @media (min-width: $mantine-breakpoint-xs) {
+    justify-content: start;
+  }
+}
