--- a/components/Hamburger/Hamburger.module.css
+++ b/components/Hamburger/Hamburger.module.css
@@ -1,3 +1,10 @@
+/*!
+ * Hamburgers
+ * @description Tasty CSS-animated hamburgers
+ * @author Jonathan Suh @jonsuh
+ * @site https://jonsuh.com/hamburgers
+ * @link https://github.com/jonsuh/hamburgers
+ */
 .hamburger {
   padding: 15px 15px;
   display: inline-block;
@@ -6,7 +13,7 @@
   transition-duration: 0.15s;
   transition-timing-function: linear;
   font: inherit;
-  color: white;
+  color: inherit;
   text-transform: none;
   background-color: transparent;
   border: 0;
@@ -14,15 +21,13 @@
   overflow: visible;
 }
 .hamburger:hover {
-  opacity: 0.7;
+  opacity: 0.9;
 }
-.hamburger.is-active:hover {
-  opacity: 0.7;
-}
-.hamburger.is-active .hamburgerInner,
-.hamburger.is-active .hamburgerInner::before,
-.hamburger.is-active .hamburgerInner::after {
-  background-color: #ffffff;
+
+.hamburger.isActive .hamburgerInner,
+.hamburger.isActive .hamburgerInner::before,
+.hamburger.isActive .hamburgerInner::after {
+  background-color: var(--mantine-color-white);
 }
 
 .hamburgerBox {
@@ -41,9 +46,9 @@
 .hamburgerInner::before,
 .hamburgerInner::after {
   width: 40px;
-  height: 4px;
-  background-color: #000;
-  border-radius: 4px;
+  height: 3px;
+  background-color: var(--mantine-color-white);
+  border-radius: 1px;
   position: absolute;
   transition-property: transform;
   transition-duration: 0.15s;
@@ -62,12 +67,40 @@
 }
 
 /*
-   * Arrow
+   * Spring
    */
-.hamburgerArrow.is-active .hamburgerInner::before {
-  transform: translate3d(-8px, 0, 0) rotate(-45deg) scale(0.7, 1);
+.hamburgerSpring .hamburgerInner {
+  top: 2px;
+  transition: background-color 0s 0.13s linear;
+}
+.hamburgerSpring .hamburgerInner::before {
+  top: 10px;
+  transition:
+    top 0.1s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
+    transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.hamburgerSpring .hamburgerInner::after {
+  top: 20px;
+  transition:
+    top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1),
+    transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
-.hamburgerArrow.is-active .hamburgerInner::after {
-  transform: translate3d(-8px, 0, 0) rotate(45deg) scale(0.7, 1);
+.hamburgerSpring.isActive .hamburgerInner {
+  transition-delay: 0.22s;
+  background-color: transparent !important;
+}
+.hamburgerSpring.isActive .hamburgerInner::before {
+  top: 0;
+  transition:
+    top 0.1s 0.15s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
+    transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translate3d(0, 10px, 0) rotate(45deg);
+}
+.hamburgerSpring.isActive .hamburgerInner::after {
+  top: 0;
+  transition:
+    top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333),
+    transform 0.13s 0.22s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translate3d(0, 10px, 0) rotate(-45deg);
 }
