--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,8 +1,7 @@
 .container {
-  background-color: var(--mantine-primary-color-5);
+  background-color: var(--mantine-primary-color-6);
   display: flex;
   justify-content: space-around;
-
   padding: 1.5rem 2.5rem;
 
   @media (min-width: $mantine-breakpoint-xs) {
@@ -14,11 +13,153 @@
   }
 }
 
-.navbar {
+.header {
   flex: 1;
   max-width: 1296px;
+  z-index: 300;
 }
 
 .burger {
   color: var(--mantine-color-white);
+}
+
+.overlay {
+  transform: translateY(-100%);
+  position: fixed;
+  z-index: 200;
+  display: flex;
+  justify-content: space-around;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--mantine-primary-color-6);
+  visibility: hidden;
+  transition:
+    transform 0.4s ease-in-out,
+    visibility 0s 0.4s;
+
+  @media (min-width: $mantine-breakpoint-xs) {
+  }
+  @media (min-width: $mantine-breakpoint-lg) {
+  }
+}
+.open {
+  visibility: visible;
+
+  transform: translateY(0%);
+
+  padding-top: 17rem;
+  padding-bottom: 8rem;
+
+  transition: transform 0.4s ease-in-out;
+}
+
+.grow {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.navigation {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+
+  margin-top: -3rem;
+
+  @media (min-width: $mantine-breakpoint-xs) {
+    margin-top: 0;
+  }
+  @media (min-width: $mantine-breakpoint-lg) {
+  }
+}
+
+.link {
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--mantine-color-white);
+
+  font-size: 50px;
+
+  @media (min-width: $mantine-breakpoint-xs) {
+    font-size: 64px;
+  }
+  @media (min-width: $mantine-breakpoint-lg) {
+    font-size: 80px;
+  }
+
+  font-weight: 500;
+  line-height: 100%;
+  text-decoration: none;
+  letter-spacing: 2px;
+
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 100%;
+    bottom: 0;
+    background: var(--mantine-color-white);
+    height: 2px;
+    -webkit-transition-property: right;
+    transition-property: right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+}
+
+.link:hover::before,
+.link:focus::before,
+.link:active::before {
+  right: 0;
+}
+
+.link.loading::before {
+  right: 0;
+  animation-name: slidein;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes slidein {
+  from {
+    transform: translateX(-120%);
+  }
+
+  to {
+    transform: translateX(120%);
+  }
+}
+
+.link:link {
+}
+
+.link:visited {
+}
+
+.link:focus {
+}
+
+.link:hover {
+}
+
+.link:active {
 }
