--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,13 @@
 .title {
   margin-bottom: 2rem;
-  font-size: 50px;
+  font-size: 35px;
+  @media (min-width: $mantine-breakpoint-xs) {
+    font-size: 40px;
+  }
+  @media (min-width: $mantine-breakpoint-lg) {
+    font-size: 50px;
+  }
+
   line-height: 200%;
   font-weight: 500;
   color: var(--mantine-primary-color-6);
